# SmartLock

./: README.md  projectfreertos.ioc  readme.md
AI_Human_Face_Recognition/: cert_0.pem  sdkconfig.defaults  tls_chain.txt
AI_Human_Face_Recognition/components/esp-code-scanner/: CMakeLists.txt
AI_Human_Face_Recognition/esp32Board_wifi/: CMakeLists.txt  IIC协议说明.xlsx  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
AI_Human_Face_Recognition/esp32Board_wifi/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
AI_Human_Face_Recognition/esp32Board_wifi/main/ai/: yahboom_ai_utils.cpp  yahboom_human_face_recognition.cpp  yahboom_human_face_recognition.hpp
AI_Human_Face_Recognition/esp32Board_wifi/main/include/: app_mywifi.h  esp_code_scanner.h  my_ble_unlock.h  my_usart.h  my_usart1_user.h  my_user_iic.h  mykey.h
AI_Human_Face_Recognition/esp32Board_wifi/main/src/: app_myperipherals.c  app_mywifi.c  my_ble_unlock.c  my_usart.c  my_usart1_user.c  my_user_iic.c  mykey.c  yahboom_camera.c
Core/Inc/: main.h  stm32f4xx_it.h  uart_debug.h
Core/Src/: freertos.c  gpio.c  keyboard.c  main.c  main.c.1  servo.c  sfm.c  spi.c  usart.c
MDK-ARM/: projectfreertos.uvguix.13753  projectfreertos.uvoptx  projectfreertos.uvprojx  startup_stm32f407xx.lst
MDK-ARM/projectfreertos/: cmsis_os2.crf  cmsis_os2.d  event_groups.crf  flash.crf  flash.d  freertos.crf  freertos.d  gpio.crf  gpio.d  i2c.crf  keyboard.crf  list.crf  list.d  main.crf  menu.crf  menu.d  oled.crf  projectfreertos.axf  queue.crf  (+58 more)
miniprogram-1/: project.config.json  project.private.config.json
projectfreertos/: .mxproject  projectfreertos.ioc
(+127 files in other folders)
